Fix z-index for typeahead match wrapper

--- a/UITypeaheadInput/demo/index.scss
+++ b/UITypeaheadInput/demo/index.scss
@@ -48,6 +48,7 @@
     left: 0;
     right: 0;
     top: 100%;
+    z-index: 99;
 }
 
 .ui-typeahead-match {
